k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretreceiver
  labels:
    app.kubernetes.io/name: secretreceiver
    app.kubernetes.io/instance: secretreceiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secretreceiver
      app.kubernetes.io/instance: secretreceiver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secretreceiver
        app.kubernetes.io/instance: secretreceiver
    spec:
      containers:
        - name: secretreceiver
          image: "betorvs/secretreceiver:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /secretreceiver/v1/health
              port: 9090
          readinessProbe:
            httpGet:
              path: /secretreceiver/v1/health
              port: 9090
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secretreceiver
  labels:
    app.kubernetes.io/name: secretreceiver
    app.kubernetes.io/instance: secretreceiver
spec:
  rules:
    - host: "secretreceiver.example.local"
      http:
        paths:
          - path: /secretreceiver/v1
            backend:
              serviceName: secretreceiver
              servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: secretreceiver
  labels:
    app.kubernetes.io/name: secretreceiver
    app.kubernetes.io/instance: secretreceiver
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: secretreceiver
    app.kubernetes.io/instance: secretreceiver
